--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "url": "https://github.com/htmlacademy-javascript/775789-code-and-magick/issues"
   },
   "devDependencies": {
-    "eslint": "4.19.1",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint": "^4.19.1",
+    "eslint-config-htmlacademy": "^0.5.2"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "npm": "^6.1.0"
+  },
   "scripts": {
     "test": "eslint js/"
   },
